Update issue templates

--- a/.github/ISSUE_TEMPLATE/기능-추가.md
+++ b/.github/ISSUE_TEMPLATE/기능-추가.md
@@ -1,6 +1,6 @@
 ---
-name: Custom issue template
-about: Describe this issue template's purpose here.
+name: 기능 추가
+about: 기능 추가 이슈 템플릿
 title: ''
 labels: ''
 assignees: ''
